did some cleancode changes and added a dummy ErrorService to handle any error. It will be filled with functions later

--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <th style="height: 30px;">Rolle:</th>
-        <td>{{ rolle }}</td>
+        <td>{{ role }}</td>
       </tr>
     </tbody>
   </table>
