--- a/src/app/user/participants-list/participants-list.component.html
+++ b/src/app/user/participants-list/participants-list.component.html
@@ -2,7 +2,7 @@
   <h3>Veranstaltung</h3>
   <hr>
   <div *ngIf="!meetingExsists">
-    Die Veranstaltung mit der Id: {{ id }} existiert leider nicht. Bitte überprüfen Sie nochmal, ob Sie wirklich diese Veranstaltungsehen möchten
+    Die Veranstaltung mit der Id: {{ id }} existiert leider nicht. Bitte überprüfen Sie nochmal, ob Sie wirklich diese Veranstaltung sehen möchten.
   </div>
   <div *ngIf="meetingExsists">
     <table *ngIf="!isLoading">
