--- a/src/app/authentification/register/register.component.html
+++ b/src/app/authentification/register/register.component.html
@@ -32,6 +32,19 @@
         class="form-control"
         (ngModelChange)="changedPassword()">
       </div>
+      <div class="form-group">
+        <span for="passwordCheck">Passwort bestätigen:</span>
+        <!-- <span *ngIf="registerForm.get('passwordCheck').invalid && registerForm.get('passwordCheck').touched" style="color: red;"> -->
+        <span *ngIf="registerForm.get('passwordCheck').touched && passwordCheckError" style="color: red;">
+          <i> {{ passwordCheckError }}</i>
+        </span>
+        <input 
+        type="password"
+        id="passwordCheck"
+        formControlName="passwordCheck"
+        class="form-control"
+        (ngModelChange)="changedPasswordCheck()">
+      </div>
       <hr>
       <div class="form-group">
         <span for="firstname">Vorname:</span>
@@ -84,9 +97,9 @@
       <i *ngIf="isSignUpFailed" style="color: red;">Fehlerhafte Registrierungsdaten</i>
       <br>
       <br>
-      <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists">
-        <span *ngIf="registerForm.valid && !usernameAlreadyExists && !emailAlreadyExists">Registrieren</span>
-        <span *ngIf="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists" style="color: rgb(117, 0, 0);"> Das Registrierungsformular ist noch nicht vollständing ausgefüllt.</span>
+      <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError">
+        <span *ngIf="registerForm.valid && !usernameAlreadyExists && !emailAlreadyExists && !passwordCheckError">Registrieren</span>
+        <span *ngIf="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError" style="color: rgb(117, 0, 0);"> Das Registrierungsformular ist noch nicht vollständing ausgefüllt.</span>
       </button>
       <hr>
       <button type="button" class="btn btn-primary btn-block" (click)="onLogin()">Doch schon Mitglied? Zurück zum Login</button>
