--- a/src/app/user/participants-list/participants-list.component.html
+++ b/src/app/user/participants-list/participants-list.component.html
@@ -1,10 +1,10 @@
 <div class="col-xs-12">
   <h3>Veranstaltung</h3>
   <hr>
-  <div *ngIf="!meetingExsists">
+  <div *ngIf="!meetingExists">
     Die Veranstaltung mit der Id: {{ id }} existiert leider nicht. Bitte überprüfen Sie nochmal, ob Sie wirklich diese Veranstaltung sehen möchten.
   </div>
-  <div *ngIf="meetingExsists">
+  <div *ngIf="meetingExists">
     <table *ngIf="!isLoading">
       <thead>
         <tr>
