--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
+      <img routerLink="/home" class="navbar-left navbar-btn" [src]="logo" style="cursor: pointer">
       <a routerLink="/home" class="navbar-brand">Meeting User Application</a>
     </div>
 
