--- a/src/app/user/participants-list/participants-list.component.html
+++ b/src/app/user/participants-list/participants-list.component.html
@@ -1,11 +1,12 @@
-<div class="col-xs-12">
+<app-loader *ngIf="isLoading"></app-loader>
+<div *ngIf="!isLoading" class="col-xs-12">
   <h3>Veranstaltung</h3>
   <hr>
   <div *ngIf="!meetingExists">
     Die Veranstaltung mit der Id: {{ id }} existiert leider nicht. Bitte überprüfen Sie nochmal, ob Sie wirklich diese Veranstaltung sehen möchten.
   </div>
   <div *ngIf="meetingExists">
-    <table *ngIf="!isLoading">
+    <table>
       <thead>
         <tr>
           <th style="text-align: center;">Name</th>
@@ -22,8 +23,6 @@
       </tbody>
     </table>
     <br>
-    <br *ngIf="isLoading">
-    <br *ngIf="isLoading">
     <table *ngIf="isEmpty" class="table table-bordered table-striped">
       <thead>
         <tr>
@@ -41,22 +40,13 @@
           <th>Firma</th>
         </tr>
       </thead>
-      <tbody *ngIf="!isLoading">
+      <tbody>
         <tr *ngFor="let user of meeting.users; let i = index">
           <td style="text-align:right;">{{ i + 1 }}</td>
           <td>{{ user.firstname }}</td>
           <td>{{ user.lastname }}</td>
           <td>{{ user.email }}</td>
           <td>{{ user.company }}</td>
-        </tr>
-      </tbody>
-    </table>
-    <table *ngIf="isLoading">
-      <tbody>
-        <tr>
-          <td>
-            <div class="loader" style="text-align: center;"></div>
-          </td>
         </tr>
       </tbody>
     </table>
