--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -1,4 +1,5 @@
-<div class="col-xs-6">
+<app-loader *ngIf="isLoading"></app-loader>
+<div *ngIf="!isLoading" class="col-xs-6">
   <h3 *ngIf="id !== 0">Veranstaltung bearbeiten</h3>
   <h3 *ngIf="id === 0">Veranstaltung hinzufügen</h3>
   <hr>
