added a loader to the login and the registration

--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="card col-xs-5">
+<app-loader *ngIf="isLoading"></app-loader>
+<div *ngIf="!isLoading" class="card col-xs-5">
   <div *ngIf="isLoggedIn">
     <span>Sie sind bereits eingeloggt</span>
   </div>
