fixed some typos

--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -32,7 +32,7 @@
       <br>
       <button type="submit" class="btn btn-info btn-block" [disabled]="loginForm.invalid">
         <span *ngIf="loginForm.valid">Anmelden</span>
-        <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständing ausgefüllt.</span>
+        <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständig ausgefüllt.</span>
       </button>
       <hr>
       <button type="button" class="btn btn-primary btn-block" (click)="onRegister()">Noch kein Mitglied? Hier registrieren</button>
