--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -29,4 +29,8 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <button class="btn btn-primary col-md-4" (click)="onEdit()">Profil bearbeiten</button>
+  <div class="col-md-5"></div>
+  <button class="btn btn-danger col-md-3" (click)="onDelete()">Profil löschen</button>
 </div>
