--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,4 +1,5 @@
-<div class="col-xs-6">
+<app-loader *ngIf="isLoading"></app-loader>
+<div *ngIf="!isLoading" class="col-xs-6">
   <h3>Profil</h3>
   <hr>
   <table>
@@ -31,6 +32,6 @@
   </table>
   <hr>
   <button class="btn btn-primary col-md-4" (click)="onEdit()">Profil bearbeiten</button>
-  <div class="col-md-5"></div>
-  <button class="btn btn-danger col-md-3" (click)="onDelete()">Profil löschen</button>
+  <div class="col-md-4"></div>
+  <button class="btn btn-danger col-md-4" (click)="onDelete()">Profil löschen</button>
 </div>
