fixed an issue where it was possible to change the users information and delete its profile while logged in with another user. Also disabled the edit and delete Funktion for the admin as long there is only one

--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -30,8 +30,10 @@
       </tr>
     </tbody>
   </table>
-  <hr>
-  <button class="btn btn-primary col-md-4" (click)="onEdit()">Profil bearbeiten</button>
-  <div class="col-md-4"></div>
-  <button class="btn btn-danger col-md-4" (click)="onDelete()">Profil löschen</button>
+  <span *ngIf="!isAdmin">
+    <hr>
+    <button class="btn btn-primary col-md-4" (click)="onEdit()">Profil bearbeiten</button>
+    <div class="col-md-4"></div>
+    <button class="btn btn-danger col-md-4" (click)="onDelete()">Profil löschen</button>
+  </span>
 </div>
