--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -5,27 +5,27 @@
   <table>
     <tbody>
       <tr>
-        <th style="width: 160px; height: 30px;">Benutzername:</th>
+        <th class="profile-height profile-width">Benutzername:</th>
         <td>{{ user.username }}</td>
       </tr>
       <tr>
-        <th style="height: 30px;">Vorname:</th>
+        <th class="profile-height">Vorname:</th>
         <td>{{ user.firstname }}</td>
       </tr>
       <tr>
-        <th style="height: 30px;">Nachname:</th>
+        <th class="profile-height"> Nachname:</th>
         <td>{{ user.lastname }}</td>
       </tr>
       <tr>
-        <th style="height: 30px;">Email:</th>
+        <th class="profile-height">Email:</th>
         <td>{{ user.email }}</td>
       </tr>
       <tr>
-        <th style="height: 30px;">Firma/Unternehmen:</th>
+        <th class="profile-height">Firma/Unternehmen:</th>
         <td>{{ user.company }}</td>
       </tr>
       <tr>
-        <th style="height: 30px;">Rolle:</th>
+        <th class="profile-height">Rolle:</th>
         <td>{{ role }}</td>
       </tr>
     </tbody>
