--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -11,7 +11,7 @@
     (ngSubmit)="onSubmit()">
       <div class="form-group">
         <span for="username">Benutzername:</span>
-        <i *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched" style="color: red;"> Bitte geben Sie Ihren Beutzernamen ein.</i>
+        <i *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched"> Bitte geben Sie Ihren Beutzernamen ein.</i>
         <input
         type="text"
         id="username"
@@ -20,19 +20,19 @@
       </div>
       <div class="form-group">
         <span for="password">Passwort:</span>
-        <i *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" style="color: red;"> Bitte geben Sie Ihr Passwort ein.</i>
+        <i *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched"> Bitte geben Sie Ihr Passwort ein.</i>
         <input
         type="password"
         id="password"
         formControlName="password"
         class="form-control">
       </div>
-      <i *ngIf="isLoginFailed" style="color: red;">Fehlerhafte Logindaten</i>
+      <i *ngIf="isLoginFailed">Fehlerhafte Logindaten</i>
       <br>
       <br>
       <button type="submit" class="btn btn-info btn-block" [disabled]="loginForm.invalid">
         <span *ngIf="loginForm.valid">Anmelden</span>
-        <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständig ausgefüllt.</span>
+        <span *ngIf="loginForm.invalid" class="disabled"> Das Anmeldeformular ist noch nicht vollständig ausgefüllt.</span>
       </button>
       <hr>
       <button type="button" class="btn btn-primary btn-block" (click)="onRegister()">Noch kein Mitglied? Hier registrieren</button>
