--- a/src/app/authentification/register-and-login.component.css
+++ b/src/app/authentification/register-and-login.component.css
@@ -1,8 +1,7 @@
 .card {
   background-color: #f7f7f7;
   padding: 20px 25px;
-  margin: 0 auto 25px;
-  margin-top: 50px;
+  margin: 50px auto 25px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
