--- a/src/app/authentification/register/register.component.html
+++ b/src/app/authentification/register/register.component.html
@@ -11,9 +11,7 @@
     (ngSubmit)="onSubmit()">
       <div class="form-group">
         <span for="username">Benutzername:</span>
-        <span *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched || usernameAlreadyExists" style="color: red;">
-          <i> {{ usernameError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched || usernameAlreadyExists"> {{ usernameError }}</i>
         <input
         type="text"
         id="username"
@@ -23,9 +21,7 @@
       </div>
       <div class="form-group">
         <span for="password">Passwort:</span>
-        <span *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched" style="color: red;">
-          <i> {{ passwordError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched"> {{ passwordError }}</i>
         <input
         type="password"
         id="password"
@@ -35,9 +31,7 @@
       </div>
       <div class="form-group">
         <span for="passwordCheck">Passwort bestätigen:</span>
-        <span *ngIf="registerForm.get('passwordCheck').touched && passwordCheckError" style="color: red;">
-          <i> {{ passwordCheckError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('passwordCheck').touched && passwordCheckError"> {{ passwordCheckError }}</i>
         <input
         type="password"
         id="passwordCheck"
@@ -48,9 +42,7 @@
       <hr>
       <div class="form-group">
         <span for="firstname">Vorname:</span>
-        <span *ngIf="registerForm.get('firstname').invalid && registerForm.get('firstname').touched" style="color: red;">
-          <i> {{ firstnameError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('firstname').invalid && registerForm.get('firstname').touched"> {{ firstnameError }}</i>
         <input
         type="text"
         id="firstname"
@@ -60,9 +52,7 @@
       </div>
       <div class="form-group">
         <span for="lastname">Nachname:</span>
-        <span *ngIf="registerForm.get('lastname').invalid && registerForm.get('lastname').touched" style="color: red;">
-          <i> {{ lastnameError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('lastname').invalid && registerForm.get('lastname').touched"> {{ lastnameError }}</i>
         <input
         type="text"
         id="lastname"
@@ -72,9 +62,7 @@
       </div>
       <div class="form-group">
         <span for="email">E-Mail:</span>
-        <span *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched || emailAlreadyExists" style="color: red;">
-          <i> {{ emailError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched || emailAlreadyExists"> {{ emailError }}</i>
         <input
         type="email"
         id="email"
@@ -84,9 +72,7 @@
       </div>
       <div class="form-group">
         <span for="company">Firma/Unternehmen:</span>
-        <span *ngIf="registerForm.get('company').invalid && registerForm.get('company').touched" style="color: red;">
-          <i> {{ companyError }}</i>
-        </span>
+        <i *ngIf="registerForm.get('company').invalid && registerForm.get('company').touched"> {{ companyError }}</i>
         <input
         type="text"
         id="company"
@@ -94,12 +80,12 @@
         class="form-control"
         (ngModelChange)="changedCompany()">
       </div>
-      <i *ngIf="isSignUpFailed" style="color: red;">Fehlerhafte Registrierungsdaten</i>
+      <i *ngIf="isSignUpFailed">Fehlerhafte Registrierungsdaten</i>
       <br>
       <br>
       <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError">
-        <span *ngIf="registerForm.valid && !usernameAlreadyExists && !emailAlreadyExists && !passwordCheckError">Registrieren</span>
-        <span *ngIf="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError" style="color: rgb(117, 0, 0);"> Das Registrierungsformular ist noch nicht vollständig ausgefüllt.</span>
+        <span *ngIf="!(registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError)">Registrieren</span>
+        <span *ngIf="registerForm.invalid || usernameAlreadyExists || emailAlreadyExists || passwordCheckError" class="disabled"> Das Registrierungsformular ist noch nicht vollständig ausgefüllt.</span>
       </button>
       <hr>
       <button type="button" class="btn btn-primary btn-block" (click)="onLogin()">Doch schon Mitglied? Zurück zum Login</button>
