--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,8 +10,14 @@
 <div class="col-xs-6">
   <h3>Patchnotes:</h3>
   <hr>
+  <h4>11.12.2020</h4>
   <ul>
-    <li>Rechtschreibfehler auf der Startseite korrigiert</li>
-    <li>Es ist als User nun möglich sein Profil zu überarbeiten und zu löschen</li>
+    <li>Rechtschreibfehler auf der Startseite korrigiert.</li>
+    <li>Es ist als User nun möglich sein Profil zu überarbeiten und zu löschen.</li>
+    <ul>
+      <li>Solltet ihr das Passwort eines der voreingestellten Benutzer verändern, dann ändert es bitte wieder auf den Standard von "12345" zurück, wenn ihr fertig seid mit dem was ihr ausprobieren wolltet.</li>
+      <li>Bitte keinen der voreingestelten Bentutzer löschen. Falls das ausversehen mal passieren sollte, dann fügt ihn bitte wieder hinzu.</li>
+    </ul>
+    <li>Die Buttons in den Spalten "An Veranstaltung Teilnehmen" und "Für User sichtbar" wurden durch Checkboxen ersetzt und die Tabellenüberschrift an dieser Stelle wurde nocheinmal leicht überarbeitet.</li>
   </ul>
 </div>
