--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,5 +1,16 @@
 <div class="col-xs-6"></div>
 <div class="lds-default center">
-  <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
   <img [src]="'../../favicon.ico'" class="image-in-loader">
 </div>
