--- a/src/app/user/profile/profile-edit/profile-edit.component.html
+++ b/src/app/user/profile/profile-edit/profile-edit.component.html
@@ -7,7 +7,7 @@
     (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="firstname">Vorname: </label>
-      <i *ngIf="profileForm.get('firstname').invalid && profileForm.get('firstname').touched" style="color: red;"> {{ firstnameError }}</i>
+      <i *ngIf="profileForm.get('firstname').invalid && profileForm.get('firstname').touched"> {{ firstnameError }}</i>
       <input
         type="text"
         id="firstname"
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label for="lastname">Nachname: </label>
-      <i *ngIf="profileForm.get('lastname').invalid && profileForm.get('lastname').touched" style="color: red;"> {{ lastnameError }}</i>
+      <i *ngIf="profileForm.get('lastname').invalid && profileForm.get('lastname').touched"> {{ lastnameError }}</i>
       <input
         type="text"
         id="lastname"
@@ -29,7 +29,7 @@
     </div>
     <div class="form-group">
       <label for="email">E-Mail: </label>
-      <i *ngIf="profileForm.get('email').invalid && profileForm.get('email').touched || emailAlreadyExists" style="color: red;"> {{ emailError }}</i>
+      <i *ngIf="profileForm.get('email').invalid && profileForm.get('email').touched || emailAlreadyExists"> {{ emailError }}</i>
       <input
         type="email"
         id="email"
@@ -40,7 +40,7 @@
     </div>
     <div class="form-group">
       <label for="company">Firma/Unternehmen: </label>
-      <i *ngIf="profileForm.get('company').invalid && profileForm.get('company').touched" style="color: red;"> {{ companyError }}</i>
+      <i *ngIf="profileForm.get('company').invalid && profileForm.get('company').touched"> {{ companyError }}</i>
       <input
         type="text"
         id="company"
@@ -56,7 +56,7 @@
     <br>
     <button type="submit" class="btn btn-info btn-block" [disabled]="(!editPasswordActive && (profileForm.invalid || emailAlreadyExists)) || (editPasswordActive && (profileForm.invalid || passwordForm.invalid || emailAlreadyExists || newPasswordCheckError))">
       <span *ngIf="!((!editPasswordActive && (profileForm.invalid || emailAlreadyExists)) || (editPasswordActive && (profileForm.invalid || passwordForm.invalid || emailAlreadyExists || newPasswordCheckError)))">Profil speichern</span>
-      <span *ngIf="(!editPasswordActive && (profileForm.invalid || emailAlreadyExists)) || (editPasswordActive && (profileForm.invalid || passwordForm.invalid || emailAlreadyExists || newPasswordCheckError))" style="color: rgb(117, 0, 0);">Bitte füllen Sie alle Eingabefelder aus</span>
+      <span *ngIf="(!editPasswordActive && (profileForm.invalid || emailAlreadyExists)) || (editPasswordActive && (profileForm.invalid || passwordForm.invalid || emailAlreadyExists || newPasswordCheckError))" class="disabled">Bitte füllen Sie alle Eingabefelder aus</span>
     </button>
   </form>
   <hr>
@@ -69,7 +69,7 @@
     [formGroup]="passwordForm">
     <div class="form-group">
       <label for="currentPassword">Aktuelles Passwort: </label>
-      <i *ngIf="passwordForm.get('currentPassword').invalid && passwordForm.get('currentPassword').touched" style="color: red;"> {{ passwordError }}</i>
+      <i *ngIf="passwordForm.get('currentPassword').invalid && passwordForm.get('currentPassword').touched"> {{ passwordError }}</i>
       <input
         type="password"
         id="currentPassword"
@@ -81,7 +81,7 @@
     <br>
     <div class="form-group">
       <label for="password">Neues Passwort: </label>
-      <i *ngIf="passwordForm.get('password').invalid && passwordForm.get('password').touched" style="color: red;"> {{ newPasswordError }}</i>
+      <i *ngIf="passwordForm.get('password').invalid && passwordForm.get('password').touched"> {{ newPasswordError }}</i>
       <input
         type="password"
         id="password"
@@ -92,7 +92,7 @@
     </div>
     <div class="form-group">
       <label for="passwordCheck">Neues Password bestätigen: </label>
-      <i *ngIf="passwordForm.get('passwordCheck').touched && newPasswordCheckError" style="color: red;"> {{ newPasswordCheckError }}</i>
+      <i *ngIf="passwordForm.get('passwordCheck').touched && newPasswordCheckError"> {{ newPasswordCheckError }}</i>
       <input
         type="password"
         id="passwordCheck"
